| Summary: | ASTERISK-19883: [patch] - RTP packet with Timestamp=0 on Multicast paging | ||
| Reporter: | Giacomo Trovato (giacomo) | Labels: | |
| Date Opened: | 2012-05-17 03:06:26 | Date Closed: | 2013-04-13 22:01:52 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_page |
| Versions: | 1.8.11.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | AsteriskNow 2.0.2 | Attachments: | ( 0) extensions.conf ( 1) rtp-timestamp.patch ( 2) rtp-timestamp-1.8.patch ( 3) rtp-timestamp-zero.pcap ( 4) sip.conf |
| Description: | Multicast paging doens't work since multicast RTP packets have Timestamp=0. | ||
| Comments: | By: Rusty Newton (rnewton) 2012-05-22 16:14:58.602-0500 Thank you for taking the time to report this bug and helping to make Asterisk better. Unfortunately, we cannot work on this bug because your description did not include enough information. You may find it helpful to read the Asterisk Issue Guidelines http://www.asterisk.org/developers/bug-guidelines. We would be grateful if you would then provide a more complete description of the problem. At a minimum, we need: 1. the specific steps or actions you took that caused you to encounter the problem, 2. the behavior you expected, and 3. the behavior you actually encountered (in as much detail as possible). This likely includes output from the console with debug level logging, a SIP trace (if this is SIP related), and configuration information such as dialplan (e.g. extensions.conf) and channel configuration (e.g. sip.conf). Thanks! Be sure to include your extensions.conf, sip.conf, a SIP and RTP packet capture showing the issue and further explanation of the expected results and what "doesn't work". Within that, please describe what endpoint devices are at the destination of the page including model and firmware version if applicable. By: Matt Jordan (mjordan) 2012-06-22 08:52:38.375-0500 Suspended due to lack of activity. Please request a bug marshal in #asterisk-bugs on the IRC network irc.freenode.net to reopen the issue should you have the additional information requested. Further information can be found at http://www.asterisk.org/developers/bug-guidelines By: Pietro Bertera (pbertera) 2012-12-12 03:20:25.385-0600 I successfully reproduced this issue in asterisk trunk (revision 377802): the issue appears with Dial(MulticastRTP/basic/239.255.255.245:5555,,A(my-announce)) seems that res/res_rtp_multicast.c doesn't check if the source frame contains timing info: the issue doesn't appears using SIP as a channel driver. Attached here you can find [^sip.conf], [^extensions.conf] and the [^rtp-timestamp-zero.pcap] (pcap trace) taken from the phone. reproduction step: 1) configure a phone for receiving multicast stream 2) configure the dialplan using Dial(MulticastRTP/basic/xxx.xxx.xxx.xxx:yyyy,,A(some-announce-file)) By: Pietro Bertera (pbertera) 2012-12-12 03:23:29.737-0600 This [^rtp-timestamp.patch] adds the timestamp check in res/res_rtp_multicast.c This patch is against Asterisk trunk - revision 377802 By: Tzafrir Cohen (tzafrir) 2013-04-10 09:39:24.609-0500 Backport of patch to branch 1.8 (1.8.21.0) By: Tzafrir Cohen (tzafrir) 2013-04-10 09:42:45.295-0500 Tested this issue on both trunk (r384857) and 1.8 (1.8.21.0). Fixed an issue for me with a Yealink SIP-T28P phone. Attached the patch vs. 1.8. | ||